<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/blue_edges"
    tools:context="com.example.tobibur.cgpacalculator.MainActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="45dp"
            android:paddingLeft="45dp"
            android:paddingRight="25dp"
            android:paddingEnd="25dp"
            android:id="@+id/linearLayout">

            <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/semester_points"
            android:id="@+id/textView"
            android:gravity="center"
                android:textStyle="bold"
                android:textSize="25sp"
                android:textColor="#84f052" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/if_zero"
                android:id="@+id/textView10"
                android:textColor="#8ff1c5" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_1st_sem"
                android:id="@+id/textView2"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="0dp"
                android:textStyle="bold"
                android:textColor="@color/colorAccent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_2nd_sem"
                android:id="@+id/textView3"
                android:layout_marginTop="42dp"
                android:textStyle="bold"
                android:textColor="@color/colorAccent" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_3rd_sem"
                android:id="@+id/textView4"
                android:layout_marginTop="55dp"
                android:textStyle="bold"
                android:textColor="@color/colorAccent" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_4th_sem"
                android:id="@+id/textView5"
                android:layout_marginTop="55dp"
                android:textStyle="bold"
                android:textColor="@color/colorAccent" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_5th_sem"
                android:id="@+id/textView6"
                android:layout_marginTop="55dp"
                android:textStyle="bold"
                android:textColor="@color/colorAccent" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_6th_sem"
                android:id="@+id/textView7"
                android:layout_marginTop="55dp"
                android:textStyle="bold"
                android:textColor="@color/colorAccent" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_7th_sem"
                android:id="@+id/textView8"
                android:layout_marginTop="55dp"
                android:textStyle="bold"
                android:textColor="@color/colorAccent" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_8th_sem"
                android:id="@+id/textView9"
                android:layout_marginTop="55dp"
                android:textStyle="bold"
                android:textColor="@color/colorAccent" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="45dp"
            android:id="@+id/linearLayout2">
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:ems="10"
                android:id="@+id/editText1"
                android:layout_below="@+id/editText"
                android:layout_alignLeft="@+id/editText"
                android:layout_alignStart="@+id/editText"
                android:layout_marginTop="80dp" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:ems="10"
                android:id="@+id/editText2"
                android:layout_below="@+id/editText"
                android:layout_alignLeft="@+id/editText"
                android:layout_alignStart="@+id/editText"
                android:layout_marginTop="20dp" />
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:ems="10"
                android:id="@+id/editText3"
                android:layout_below="@+id/editText"
                android:layout_alignLeft="@+id/editText"
                android:layout_alignStart="@+id/editText"
                android:layout_marginTop="32dp" />
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:ems="10"
                android:id="@+id/editText4"
                android:layout_below="@+id/editText"
                android:layout_alignLeft="@+id/editText"
                android:layout_alignStart="@+id/editText"
                android:layout_marginTop="32dp" />
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:ems="10"
                android:id="@+id/editText5"
                android:layout_below="@+id/editText"
                android:layout_alignLeft="@+id/editText"
                android:layout_alignStart="@+id/editText"
                android:layout_marginTop="30dp" />
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:ems="10"
                android:id="@+id/editText6"
                android:layout_below="@+id/editText"
                android:layout_alignLeft="@+id/editText"
                android:layout_alignStart="@+id/editText"
                android:layout_marginTop="25dp" />
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:ems="10"
                android:id="@+id/editText7"
                android:layout_below="@+id/editText"
                android:layout_alignLeft="@+id/editText"
                android:layout_alignStart="@+id/editText"
                android:layout_marginTop="32dp" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:ems="10"
                android:id="@+id/editText8"
                android:layout_below="@+id/editText"
                android:layout_alignLeft="@+id/editText"
                android:layout_alignStart="@+id/editText"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="15dp"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cgpa"
                android:id="@+id/button"
                android:onClick="CgpaMethod"
                android:textStyle="bold"
                android:background="@color/accent_material_dark" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:id="@+id/textView11"
                android:layout_gravity="center|bottom"
                android:layout_alignParentBottom="true"
                android:layout_toRightOf="@+id/linearLayout2"
                android:layout_toEndOf="@+id/linearLayout2"

                android:textColor="@color/colorAccent"
                android:visibility="visible" />

        </LinearLayout>

    </RelativeLayout>

</ScrollView>
